--- a/Uninfer/Uninfer/Uninfer.csproj
+++ b/Uninfer/Uninfer/Uninfer.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Analyzer\UninferAnalyzer.cs" />
-    <Compile Include="CodeFixProvider.cs" />
+    <Compile Include="FixProvider\UninferCodeFixProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
       <AutoGen>True</AutoGen>
